--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dedent": "^1.5.3",
     "dockerode": "^4.0.0",
     "env-paths": "^3.0.0",
+    "lodash.chunk": "^4.2.0",
     "rimraf": "^4.1.2",
     "wait-port": "^1.0.4"
   },
@@ -42,6 +43,7 @@
     "@nasa-gcn/eslint-config-gitignore": "^0.0.2",
     "@tsconfig/node14": "^14.1.2",
     "@types/dockerode": "^3.3.23",
+    "@types/lodash.chunk": "^4.2.9",
     "@types/node": "^22.2.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "esbuild": "^0.24.0",
