--- a/package.json
+++ b/package.json
@@ -32,18 +32,16 @@
     "@aws-sdk/client-dynamodb-streams": "^3.731.1",
     "@aws-sdk/client-ssm": "^3.731.1",
     "@aws-sdk/lib-dynamodb": "^3.731.1",
-    "dedent": "^1.5.3",
     "dockerode": "^4.0.0",
-    "env-paths": "^3.0.0",
-    "lodash.chunk": "^4.2.0",
-    "rimraf": "^4.1.2",
+    "lodash": "^4.17.21",
+    "ts-dedent": "^2.2.0",
     "wait-port": "^1.0.4"
   },
   "devDependencies": {
     "@nasa-gcn/eslint-config-gitignore": "^0.0.2",
     "@tsconfig/node14": "^14.1.2",
     "@types/dockerode": "^3.3.23",
-    "@types/lodash.chunk": "^4.2.9",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^22.2.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "esbuild": "^0.24.0",
