--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@architect/functions": "^8.1.7",
+    "@architect/utils": "^4.0.6",
     "@aws-sdk/client-dynamodb": "^3.731.1",
     "@aws-sdk/client-dynamodb-streams": "^3.731.1",
     "@aws-sdk/client-ssm": "^3.731.1",
