Activate various project dev tools
- Complete Husky setup to run lint-staged as a pre-commit hook
- Install Prettier plugin for sorting imports
- Re-run Prettier on all files
- Install missing TypeScript type definitions for architect so
  that `tsc` lint-staged rule passes
- Add @architect/sandbox as a peer dependency
- Configure Dependabot updates

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,6 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
-    "types": [
-      "@types/node",
-    ],
+    "types": ["@types/node"]
   }
 }
