--- a/package.json
+++ b/package.json
@@ -39,8 +39,14 @@
     "wait-port": "^1.0.4"
   },
   "devDependencies": {
+    "@aws-lite/apigatewaymanagementapi-types": "^0.0.13",
+    "@aws-lite/dynamodb-types": "^0.3.11",
+    "@aws-lite/sns-types": "^0.0.10",
+    "@aws-lite/sqs-types": "^0.2.6",
     "@nasa-gcn/eslint-config-gitignore": "^0.0.2",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@tsconfig/node14": "^14.1.2",
+    "@types/aws-lambda": "^8.10.147",
     "@types/dockerode": "^3.3.23",
     "@types/lodash": "^4.17.15",
     "@types/node": "^22.2.0",
@@ -54,10 +60,16 @@
     "prettier": "^3.0.0",
     "typescript": "^5.7.2"
   },
+  "peerDependencies": {
+    "@architect/sandbox": "^6.0.5"
+  },
   "prettier": {
     "semi": false,
     "singleQuote": true,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "plugins": [
+      "@trivago/prettier-plugin-sort-imports"
+    ]
   },
   "eslintConfig": {
     "env": {
