--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@aws-sdk/client-dynamodb-streams": "^3.731.1",
     "@aws-sdk/client-ssm": "^3.731.1",
     "@aws-sdk/lib-dynamodb": "^3.731.1",
+    "@nasa-gcn/architect-plugin-utils": "^0.2.0",
     "dockerode": "^4.0.0",
     "lodash": "^4.17.21",
     "ts-dedent": "^2.2.0",
