Adding some basic tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "strict": true,
-    "types": ["@types/node"]
+    "types": ["@types/node"],
+    "resolveJsonModule": true
   }
 }
