--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   ],
   "scripts": {
     "prepare:husky": "husky",
-    "prepare:esbuild": "esbuild index.ts --bundle --packages=external --outfile=index.js --platform=node --format=esm --tree-shaking=true",
+    "prepare:esbuild": "esbuild __tests__/testTableStream/index.ts __tests__/test.ts index.ts --bundle --packages=external --outdir=. --platform=node --format=esm --tree-shaking=true",
     "prepare": "run-p prepare:*",
-    "test": "node --test"
+    "test:prepare": "npm run prepare",
+    "test:run": "node --test",
+    "test": "run-s test:*"
   },
   "engines": {
     "node": ">=20"
@@ -40,6 +42,9 @@
     "wait-port": "^1.0.4"
   },
   "devDependencies": {
+    "@architect/architect": "^11.2.0",
+    "@architect/inventory": "^4.0.7",
+    "@architect/sandbox": "github:lpsinger/sandbox#nasa-gcn",
     "@aws-lite/apigatewaymanagementapi-types": "^0.0.13",
     "@aws-lite/dynamodb-types": "^0.3.11",
     "@aws-lite/sns-types": "^0.0.10",
@@ -47,6 +52,7 @@
     "@nasa-gcn/eslint-config-gitignore": "^0.0.2",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@tsconfig/node14": "^14.1.2",
+    "@types/architect__sandbox": "^3.3.6",
     "@types/architect__utils": "^4.0.0",
     "@types/aws-lambda": "^8.10.147",
     "@types/dockerode": "^3.3.23",
@@ -56,14 +62,12 @@
     "esbuild": "^0.25.0",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^9.1.0",
+    "execa": "^9.5.2",
     "husky": "^9.1.0",
     "lint-staged": "^15.2.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
     "typescript": "^5.7.2"
-  },
-  "peerDependencies": {
-    "@architect/sandbox": "^6.0.5"
   },
   "prettier": {
     "semi": false,
