--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nasa-gcn/eslint-config-gitignore": "^0.0.2",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@tsconfig/node14": "^14.1.2",
+    "@types/architect__utils": "^4.0.0",
     "@types/aws-lambda": "^8.10.147",
     "@types/dockerode": "^3.3.23",
     "@types/lodash": "^4.17.15",
