Fix some issues with Docker launching code
- Fix tight loop without any sleeps if ListTables returns an HTTP
  200 OK response but that does not contain the TableNames response
  value.
- Remove unused `port` return value.
- Add error message if the Docker container exits prematurely
  during startup.
- Remove duplicated code to set up DynamoDB client.

--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "@aws-sdk/lib-dynamodb": "^3.731.1",
     "@nasa-gcn/architect-plugin-utils": "^0.3.0",
     "lodash": "^4.17.21",
-    "ts-dedent": "^2.2.0",
-    "wait-port": "^1.0.4"
+    "ts-dedent": "^2.2.0"
   },
   "devDependencies": {
     "@architect/architect": "^11.2.2",
