--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "scripts": {
     "prepare:husky": "husky",
-    "prepare:esbuild": "esbuild index.ts --bundle --packages=external --outfile=index.js --platform=node --format=esm --tree-shaking=true",
+    "prepare:esbuild": "esbuild index.ts __tests__/test.ts --bundle --packages=external --outdir=. --platform=node --format=esm --tree-shaking=true",
     "prepare": "run-p prepare:*",
     "test": "node --test"
   },
@@ -27,7 +27,6 @@
     "node": ">=20"
   },
   "dependencies": {
-    "@architect/functions": "^8.1.7",
     "@architect/utils": "^4.0.6",
     "@aws-sdk/client-dynamodb": "^3.731.1",
     "@aws-sdk/client-dynamodb-streams": "^3.731.1",
@@ -39,6 +38,8 @@
     "wait-port": "^1.0.4"
   },
   "devDependencies": {
+    "@architect/architect": "^11.2.2",
+    "@architect/functions": "^8.1.9",
     "@aws-lite/apigatewaymanagementapi-types": "^0.0.13",
     "@aws-lite/dynamodb-types": "^0.3.11",
     "@aws-lite/sns-types": "^0.0.10",
@@ -54,14 +55,15 @@
     "esbuild": "^0.25.0",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^9.1.0",
+    "execa": "^9.5.2",
     "husky": "^9.1.0",
     "lint-staged": "^15.2.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
     "typescript": "^5.7.2"
   },
-  "peerDependencies": {
-    "@architect/sandbox": "^6.0.5"
+  "overrides": {
+    "@architect/sandbox": "github:architect/sandbox"
   },
   "prettier": {
     "semi": false,
