Rewrite DynamoDB Table streams iteration to fix several issues
- Don't crash if invoking the Lambda fails.
- Iterate over shards in chronological order. Previously, we were
  iterating over them in _reverse_ chronological order because we
  were treating the list of shards as a stack (last-in, first-out).
- Fully consume each shard before moving on to the next one.
- Fetch new shards once they are all exhausted.
- Rewrite as an async generator. This simplifies the bookkeeping by
  eliminating global variables and it makes the code much more
  linear.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
-  "extends": "@tsconfig/node20/tsconfig.json",
+  "extends": "@tsconfig/node22/tsconfig.json",
   "compilerOptions": {
     "incremental": true,
     "noEmit": true,
-    "strict": true
+    "strict": true,
+    "lib": ["ES2024"],
+    "esModuleInterop": true
   }
 }
