--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "node --test"
   },
   "engines": {
-    "node": ">=20"
+    "node": ">=22"
   },
   "dependencies": {
     "@architect/utils": "^4.0.6",
@@ -34,6 +34,7 @@
     "@aws-sdk/lib-dynamodb": "^3.699.0",
     "@nasa-gcn/architect-plugin-utils": "^0.4.0",
     "lodash": "^4.17.21",
+    "tiny-invariant": "^1.3.3",
     "ts-dedent": "^2.2.0"
   },
   "devDependencies": {
@@ -42,7 +43,7 @@
     "@aws-sdk/util-dynamodb": "^3.699.0",
     "@nasa-gcn/eslint-config-gitignore": "^0.0.2",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@tsconfig/node20": "^20.1.5",
+    "@tsconfig/node22": "^22.0.1",
     "@types/architect__utils": "^4.0.0",
     "@types/aws-lambda": "^8.10.147",
     "@types/lodash": "^4.17.15",
