Update tsconfig.json to be consistent with package.json engine

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,8 @@
 {
+  "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
-    "target": "es2017",
-    "module": "ESNext",
-    "moduleResolution": "node",
+    "incremental": true,
     "noEmit": true,
-    "esModuleInterop": true,
-    "strict": true,
-    "types": ["@types/node"]
+    "strict": true
   }
 }
